[tool.poetry]
name = "WN_lookup_gen"
version = "0.1.0"
description = "Wind Ninja CLI project for spatial library creation."
authors = ["Gunjan Dayani <gunjan.dayani@usda.gov"]

[tool.poetry.dependencies]
python = "^3.9"
ipython = "^8.0"
rioxarray = "^0.8"
xarray = "^0.17"
numpy = "^1.21"
gdal = "^3.2"
matplotlib = "^3.5"
pandas = "^1.3"
geopandas = "^0.9"
contextily = "^1.2"
utm = "^0.7"
pyproj = "^3.0"
fiona = "^1.8"
shapely = "^2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"