[tool.poetry]
name = "WN_lookup_gen"
version = "0.1.0"
description = "Wind Ninja CLI project for spatial library creation."
authors = ["Gunjan Dayani <gunjan.dayani@usda.gov>"]

[tool.poetry.dependencies]
python = "^3.9"
rioxarray = "^0.8"
numpy = "^1.21"
matplotlib = "^3.5"
pandas = "^1.3"
geopandas = "^0.9"
shapely = "^2.0"
pyogrio = "^0.4"
rasterio = "^1.2"
pyproj = "^3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"