[tool.poetry]
name = "WN_lookup_gen"
version = "0.1.0"
description = "Wind Ninja CLI project for spatial library creation."
authors = ["Gunjan Dayani <gunjan.dayani@usda.gov>"]

[tool.poetry.dependencies]
python = "^3.10"
rioxarray = "^0.18.1"
numpy = "^1.23"
matplotlib = "^3.6"
pandas = "^2.1"
geopandas = "^0.13"
shapely = "^2.0"
pyogrio = "^0.5"
rasterio = "^1.3"
pyproj = "^3.6"
xarray = "^2024.11.0"
scipy = "^1.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"